Fixed navbar alignment and margins at narrow widths.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -710,6 +710,10 @@ room-sidebar-width = 240px
   padding 10px 10px
   background-color app-purple
 
+  .right-nav-links
+    float right
+    text-align right
+
   a
     color #fff
     text-decoration none
@@ -732,6 +736,7 @@ room-sidebar-width = 240px
       background-color lighten(#56C0A5, 10%)
 
 .brand
+  margin-right 10px
   text-align center
 
   > a
